# adaptive-rag

./: .env.example  .gitignore  README.md  pyproject.toml  start_api.sh  start_ui.sh
demo/: streamlit_app.py
eval/: conftest.py  helpers.py
eval/scripts/: run_eval.sh
eval/tests/: test_generation.py  test_retrieval.py  test_review_comparison.py
src/rag/api/: server.py
src/rag/core/: config.py  embeddings.py  llm.py  tracing.py  types.py
src/rag/generation/: generator.py
src/rag/ingestion/: chunker.py  indexer.py  loader.py  text_cleaner.py
src/rag/pipeline/: builder.py  state.py
src/rag/pipeline/nodes/: evaluate.py  generate.py  retrieve.py  review_generation.py  review_retrieval.py  rewrite.py
src/rag/pipeline/prompts/: prompts.yaml
src/rag/retrieval/: retriever.py  store.py
tests/: conftest.py  test_chunker.py  test_config.py  test_embeddings.py
