[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-system"
version = "0.1.0"
description = "RAG system with LangGraph pipeline, Qdrant vector store, and RAGAS evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.0",
    "qdrant-client>=1.9.0",
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.38.0",
    "requests>=2.31.0",
    "langfuse>=4.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]
eval = [
    "ragas>=0.2.0",
    "datasets>=2.14.0",
    "langchain-openai>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
